# cursor-api

./: .gitignore  README.md  api.go  ecosystem.config.js  go.mod  go.sum  main.go  main.py  package-lock.json  package.json  process.go  readme.md  types.go  utils.go
.github/workflows/: build-rs-capi.yml
cmd/server/: main.go
go-capi/: go.sum  handlers.go
go-capi/handlers/: chat.go
internal/api/: handlers.go  routes.go
internal/models/: types.go
internal/service/: chat.go
internal/utils/: hex.go  process.go
js-capi/src/: index.js  utils.js
models/: models.go
rs-capi/: Cargo.toml  Dockerfile  curl.sh  main.py
rs-capi/src/: hex_utils.rs  main.rs
rs-capi/src/handlers/: chat.rs  models.rs
rs-capi/src/models/: chat.rs
src/: index.js  utils.js
utils/: hex.go
