[package]
name = "rs-capi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15"
chrono = "0.4"
futures = "0.3"
bytes = "1.0"
regex = "1.5"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
hyper = "1.5.1"
http = "1.1.0"
